[package]
name = "scirs2-neural"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Neural network building blocks module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["neural-network", "deep-learning", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, optional = true, features = ["linalg", "openblas"] }
# Temporarily commented out for publishing
# scirs2-linalg = { workspace = true, optional = true }
# scirs2-optimize = { workspace = true, optional = true }
# scirs2-optim = { workspace = true, optional = true }
# Integration with other scirs2 modules
scirs2-metrics = { workspace = true, optional = true, default-features = false, features = ["neural_common"] }
ndarray = { workspace = true }
ndarray-stats-05 = { workspace = true }
ndarray-linalg = { workspace = true }
ndarray-rand = { workspace = true }
num-integer = { workspace = true }
approx = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
blas = { workspace = true }
openblas-src = { workspace = true }

# AI/ML specific dependencies
autograd = { workspace = true }
# Temporarily commented out for publishing
# scirs2-autograd = { workspace = true }

# Note: clip_example.rs and feature_fusion_example.rs were removed due to BLAS linking issues

# Serialization dependencies
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_cbor = { workspace = true }
rmp-serde = { workspace = true }

# Future dependency for PandRS and NumRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }
# numrs_wrapper = { path = "../wrappers/numrs_wrapper", optional = true }

[features]
default = ["openblas"]
full = ["core", "openblas"]  # Temporarily limited for publishing
core = ["dep:scirs2-core"]
# Features temporarily disabled for publishing
# linalg = ["dep:scirs2-linalg"] 
# optimize = ["dep:scirs2-optimize"]
optim = [] # Empty feature for compatibility with existing code
openblas = ["ndarray-linalg/openblas-static"]
netlib = ["ndarray-linalg/netlib"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
# Integration with other modules
metrics_integration = ["dep:scirs2-metrics"]

[[example]]
name = "neural_autograd_example"
path = "examples/neural_autograd_example.rs"

[[example]]
name = "transformer_example"
path = "examples/transformer_example.rs"

[[example]]
name = "batchnorm_example"
path = "examples/batchnorm_example.rs"

[[example]]
name = "dropout_example"
path = "examples/dropout_example.rs"

[[example]]
name = "activations_example"
path = "examples/activations_example.rs"

[[example]]
name = "model_serialization_example"
path = "examples/model_serialization_example.rs"

[[example]]
name = "advanced_optimizers_example"
path = "examples/advanced_optimizers_example.rs"

[[example]]
name = "metrics_integration_example"
path = "examples/metrics_integration_example.rs"