[package]
name = "scirs2-neural"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Neural network building blocks module for SciRS2 (scirs2-neural) - Minimal Version"
license.workspace = true
repository.workspace = true
keywords = ["neural-network", "deep-learning", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true

[dependencies]
# Essential dependencies only
ndarray = { workspace = true, features = ["serde", "rayon"] }
ndarray-rand = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
rand = { workspace = true }
statrs = { workspace = true }

[features]
default = []
gpu = []