[package]
name = "scirs2-optim"
version = "0.1.0-alpha.5"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Machine Learning optimization module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["optimization", "machine-learning", "scientific", "sgd", "adam"]
categories = ["science", "mathematics", "algorithms"]
build = "build.rs"

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
scirs2-linalg = { workspace = true }
# scirs2-optimize = { workspace = true }
scirs2-metrics = { workspace = true, optional = true, features = ["neural_common", "optim_integration"] }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
plotters = { workspace = true }
approx = { workspace = true }

[features]
default = []
# Temporarily removed optim_integration to avoid circular dependency
metrics_integration = ["dep:scirs2-metrics", "scirs2-metrics/optim_integration"]
