[package]
name = "scirs2-optimize"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Optimization module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["optimization", "minimize", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
scirs2-linalg = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
openblas-src = { workspace = true }

# Optimization specific dependencies
argmin = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
friedrich = { workspace = true }
scirs2-sparse = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }

[[example]]
name = "global_optimization"
path = "examples/global_optimization.rs"

[[example]]
name = "sparse_numerical_differentiation"
path = "examples/sparse_numerical_differentiation.rs"

[[example]]
name = "powell_example"
path = "examples/powell_example.rs"

[[example]]
name = "scalar_optimization"
path = "examples/scalar_optimization.rs"

