[package]
name = "scirs2-series"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["SciRS2 Team"]
license = "Apache-2.0"
description = "Time series analysis module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["time-series", "forecasting", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.1" }
# Temporarily commented out for publishing
# scirs2-stats = { path = "../scirs2-stats", version = "0.1.0-alpha.1" }
# scirs2-fft = { path = "../scirs2-fft", version = "0.1.0-alpha.1" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[features]
default = []
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]
