[package]
name = "scirs2-series"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Time series analysis module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["time-series", "forecasting", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
# Temporarily commented out for publishing
# scirs2-stats = { workspace = true }
# scirs2-fft = { workspace = true }
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[dev-dependencies]
approx = { workspace = true }

[features]
default = []
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]
