[package]
name = "scirs2-series"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Time series analysis module for SciRS2 (scirs2-series)"
license.workspace = true
repository.workspace = true
keywords = ["time-series", "forecasting", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["linalg"] }
scirs2-linalg = { workspace = true }
# scirs2-stats = { workspace = true } # Temporarily commented out due to compilation issues
scirs2-fft = { workspace = true }
ndarray = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true, features = ["openblas-system"] }
# openblas-src = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
memmap2 = { workspace = true }
num_cpus = { workspace = true }

# WASM dependencies
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["console"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }

# PyO3 for Python bindings
pyo3 = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
statrs.workspace = true

# Future dependency for PandRS with appropriate abstractions
# pandrs_wrapper = { path = "../wrappers/pandrs_wrapper", optional = true }

[dev-dependencies]
approx = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true, features = ["html_reports"] }

[features]
default = []
# Serialization support
serde = ["dep:serde"]
# Enable external ML library wrappers
# pandrs = ["dep:pandrs_wrapper"]
# WASM support for browser-based time series analysis
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys", "serde", "dep:serde_json", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]
# Python interoperability
python = ["dep:pyo3", "dep:numpy"]
# R integration for R ecosystem compatibility
r = []

[[bench]]
name = "comprehensive_benchmarks"
harness = false
