[package]
name = "scirs2-signal"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Signal processing module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["signal-processing", "filter", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
openblas-src = { workspace = true }

# Signal processing specific dependencies
rustfft = { workspace = true }
scirs2-fft = { workspace = true }
scirs2-linalg = { workspace = true }
scirs2-special = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
plotly = { workspace = true }
ndarray-linalg = { workspace = true }
ndarray-rand = { workspace = true }
# Optional rayon dependency for parallel processing
rayon = { workspace = true, optional = true }

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
