[package]
name = "scirs2-signal"
version.workspace = true
edition = "2021"
authors = ["SciRS2 Team"]
description = "Signal processing module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["signal-processing", "filter", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["parallel"] }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
num-integer = { workspace = true }
thiserror = { workspace = true }
# BLAS dependencies handled through scirs2-core

# Signal processing specific dependencies
rustfft = { workspace = true }
scirs2-fft = { workspace = true }
scirs2-linalg = { workspace = true }
scirs2-special = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
plotly = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true }
ndarray-rand = { workspace = true }
# Optional rayon dependency for parallel processing - now handled by scirs2-core
# rayon = { workspace = true, optional = true }

[features]
default = []
parallel = ["scirs2-core/parallel"]  # Use scirs2-core parallel abstractions

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
