[package]
name = "scirs2-signal"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Signal processing module for SciRS2 (scirs2-signal)"
license.workspace = true
repository.workspace = true
keywords = ["signal-processing", "filter", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["parallel"] }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
num-integer = { workspace = true }
thiserror = { workspace = true }
# BLAS dependencies handled through scirs2-core

# Signal processing specific dependencies
rustfft = { workspace = true }
scirs2-fft = { workspace = true }
scirs2-linalg = { workspace = true }
scirs2-special = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }
plotly = { workspace = true }
statrs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
num_cpus = { workspace = true }
approx = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true }
ndarray-rand = { workspace = true }
# Optional rayon dependency for parallel processing - now handled by scirs2-core
# rayon = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["scirs2-core/parallel"]  # Use scirs2-core parallel abstractions
unstable_avx512 = []  # Experimental AVX-512 support

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
