[package]
name = "scirs2-sparse"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Sparse matrix module for SciRS2"
license.workspace = true
repository.workspace = true
keywords = ["sparse-matrix", "csr", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core.workspace = true
scirs2-linalg.workspace = true
ndarray.workspace = true
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true

# Sparse matrix specific dependencies
sprs.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
