[package]
name = "scirs2-sparse"
version = "0.1.0-alpha.5"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Sparse matrix module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["sparse-matrix", "csr", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true }
# Removed scirs2-linalg to avoid circular dependency
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }

# Sparse matrix specific dependencies
sprs = { workspace = true }
rand = { workspace = true }

# For IO operations
byteorder = { workspace = true }


[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "sparse_benchmarks"
harness = false
