[package]
name = "scirs2-special"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Special functions module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["special-functions", "gamma", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["validation"] }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
lazy_static = { workspace = true }

[features]
default = []
parallel = ["scirs2-core/parallel", "ndarray/rayon"]
simd = ["scirs2-core/simd"]

[dev-dependencies]
criterion = { workspace = true }
