[package]
name = "scirs2-stats"
version = "0.1.0-alpha.5"
edition = "2021"
authors = ["SciRS2 Team"]
description = "Statistical functions module for SciRS2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/scirs"
keywords = ["statistics", "probability", "scientific", "scipy", "numerical"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
# BLAS dependencies removed - using core abstractions
# ndarray-linalg = { workspace = true, default-features = false }
scirs2-core = { workspace = true, features = ["validation", "parallel", "simd", "linalg"] }
scirs2-linalg = { workspace = true }

# Statistics specific dependencies
rand = { workspace = true }
rand_distr = { workspace = true }
rand_pcg = { workspace = true }
statrs = { workspace = true }
special-11 = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
plotters = { workspace = true }

[features]
default = []
# BLAS backends - these are mutually exclusive, managed through scirs2-core
openblas = ["scirs2-core/openblas"]
intel-mkl = ["scirs2-core/intel-mkl"]
netlib = ["scirs2-core/netlib"]
