[package]
name = "scirs2-text"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["SciRS2 Team"]
license = "Apache-2.0"
description = "Text processing module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["text", "nlp", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { path = "../scirs2-core", version = "0.1.0-alpha.1", features = ["parallel"] }
# Temporarily removed for publishing
# scirs2-linalg = { path = "../scirs2-linalg", version = "0.1.0-alpha.1" }
ndarray = { version = "0.16.1", features = ["serde", "rayon"] }
num-traits = "0.2.19"
num-complex = "0.4.6"
thiserror = "2.0.12"
rand = "0.9.0"

# Text processing specific dependencies
regex = "1.10"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
lazy_static = "1.4"
tempfile = "3.9"

# Feature-gated dependencies
tokenizers = { version = "0.15", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde-support = ["dep:serde", "dep:serde_json"]
tokenization = ["dep:tokenizers"]
