[package]
name = "scirs2-text"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["SciRS2 Team"]
license = "MIT OR Apache-2.0"
description = "Text processing module for SciRS2"
repository = "https://github.com/cool-japan/scirs"
keywords = ["text", "nlp", "scientific", "ai", "machine-learning"]
categories = ["science", "mathematics", "algorithms"]

[dependencies]
# Core dependencies
scirs2-core = { workspace = true, features = ["parallel"] }
# Temporarily removed for publishing
# scirs2-linalg = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
approx = { workspace = true }

# Text processing specific dependencies
regex = { workspace = true }
unicode-normalization = { workspace = true }
unicode-segmentation = { workspace = true }
lazy_static = { workspace = true }
tempfile = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }

# Feature-gated dependencies
tokenizers = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
default = []
serde-support = ["dep:serde", "dep:serde_json"]
tokenization = ["dep:tokenizers"]
